@@ -134,9 +134,13 @@ void ICACHE_FLASH_ATTR tcp_sent_cb(struct tcp_connection *connection )
 	
 	request->response.send_buffer_pos = request->response.send_buffer;
 	//This was the end of a message. Signal that it is send.
+	debug("Response state: %d.\n", request->response.state);
 	if (request->response.state == HTTP_STATE_ASSEMBLED)
 	{
+		debug("Message end.\n");
 		request->response.state = HTTP_STATE_DONE;
+		//Call one last time to clean up.
+		http_process_response(connection);
 	}
 	else
 	{
